--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 			<button class="filter">Filter</button>
 		</div>
 
-		<div class="history"> 
-			<div class="song">
+		<div class="history" id="container"> 
+<!-- 	<div class="song">
 				<h2>"Come Back"</h2>
 					<div class="artist-name">
 						<p>White Denim</p>
@@ -138,8 +138,10 @@
 					</div>
 			</div>
 
-		</div>
+		</div> -->
 
 	</div>
+
+<script src="songs.js"></script>
 </body>
 </html>
