--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
 			<button class="filter">Filter</button>
 		</div>
 
-		<div class="history" id="container"> 
+		<div class="history">
+			<div id="container"></div>
+			<div id="container2"></div>
+			<div id="more"></div>
 		</div>
 
 <script src="songs.js"></script>
