--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<nav>
 		<ul>
 			<li><a href="#" title="view-music">View Music</a></li>
+			<li><a href="#" title="view-music">List Music</a></li>
 			<li><a href="#" title="add-music">Add Music</a></li>
 			<li><a href="#" title="profile">Profile</a></li>
 		</ul>
