list view/add view works for version-4

--- a/index.html
+++ b/index.html
@@ -93,9 +93,22 @@
 				<div id="more"></div>
 			</div>
 		</div>
+		<div class="addMusic hideAddView" id="addMusic">
+				<label>Song name:</label>
+				<input type="text" id="songInput" class="musicInput">
+				<label>Artist name:</label>
+				<input type="text" id="artistInput" class="musicInput">
+				<label>Album name:</label>
+				<input type="text" id="albumInput" class="musicInput">
+				<label>Genre</label>
+				<input type="text" id="genreInput" class="musicInput">
+				<button id="addBtn">Add</button>
+			</div>
 	</div>
+
+	<script  src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="crossorigin="anonymous"></script>
 	<script src="js/songs.js"></script>
 	<script src="js/addMusicView.js"></script>
-	<!-- <script src="js/listMusicView.js"></script> -->
+	<script src="js/listMusicView.js"></script>
 </body>
 </html>
