two of 3 modules added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="#" title="view-music">View Music</a></li>
-			<li><a href="#" title="view-music" id="listMusicView">List Music</a></li>
-			<li><a href="#" title="add-music" id="addMusicView">Add Music</a></li>
-			<li><a href="#" title="profile">Profile</a></li>
+			<li><a href="#">View Music</a></li>
+			<li><a href="#" id="listMusicView">List Music</a></li>
+			<li><a href="#" id="addMusicView">Add Music</a></li>
+			<li><a href="#">Profile</a></li>
 		</ul>
 	</nav>
 
@@ -95,8 +95,6 @@
 	</div>
 
 	<script  src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="crossorigin="anonymous"></script>
-	<script src="src/scripts/index.js"></script>
-	<script src="src/scripts/addMusicView.js"></script>
-	<script src="src/scripts/listMusicView.js"></script>
+	<script src="dist/bundle.js"></script>
 </body>
 </html>
